complete hompage banner style

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,21 @@
+<div class="banner">
+	<nav class="navbar">
+		<div id="logo-s"><img src="/assets/b-only.png" alt="" ></div>
+		<div class="control">
+			<a id="EN" href="#">EN |</a>
+			<a id="CN" href="#">CN</a>
+			<a id="home" href="#">Home</a>
+			<a id="contact" href="#">Contact</a>
+		</div>	
+	</nav>
+
+	<div id="logo-lg"><img src="/assets/b-only.png" alt=""></div>
+	<div id="slogan"><img src="/assets/b-only2.png" alt=""></div>
+	<p>Your best clothing supply partner</p>
+	<a href="#"><i class="fas fa-angle-double-down"></i></a>
+</div>
+
+
 <% @post.each do |post| %>
 	<%= image_tag post.image.url(:medium) %>
 <% end %>
