--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,95 @@
 // Place all the styles related to the main controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+* {
+	// border: 0.5px solid black;
+}
+
+html, body {
+	margin: 0;
+}
+
+.banner {
+	background-image: url('/assets/banner.png');
+	background-size: cover;
+	height: 100vh;
+	padding: 0;
+	margin: 0;
+	#logo-lg {
+		position: absolute;
+		top: 150px;
+		left: 50%;
+		transform: translateX(-50%);
+		img {
+			width: 280px;
+		}
+	}
+	#slogan {
+		position: absolute;
+		top: 415px;
+		left: 50%;
+		transform: translateX(-50%);
+		img {
+			width: 258px;
+		}
+
+	}
+	p{
+		font-size: 36px;
+		text-align: center;
+		font-family: 'Roboto', sans-serif;
+		position: absolute;
+		top: 550px;
+		width: 100%;
+		color: rgba(255,255,255,1);
+		text-shadow: 1px 1px 2px rgba(0,0,0,0.6);
+	}
+	i {
+		font-size: 24px;
+		text-align: center;
+		position: absolute;
+		top: 700px;
+		width: 100%;
+		color: rgba(0,0,0,1);
+		font-weight: light;
+	}
+}
+.navbar {
+	height: 60px; 
+	background-color: #525163;
+	opacity: 0.8;	
+	#logo-s {
+		display: inline-block;
+		height: 100%;
+		margin-left: 80px;
+		img {
+			height: 50px;
+		}
+	}
+	.control {
+		display: inline-block;
+		float: right;
+		margin: 15px 80px 0 0;
+		padding: 0;
+		margin-top: 15px;
+		a {
+			margin-right: 0;
+			display: inline-block;
+			margin-left: 40px;
+			font-size: 24px;
+			line-height: 30px;
+			color: rgba(255,255,255,0.8);
+			font-family: 'Roboto', sans-serif;
+			text-decoration: none;
+			height: 100%;
+		}
+		#CN {
+			margin-left: 1px;
+		}
+			
+
+
+	
+	}
+
+}
