make languagle switchable for CN/EN

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,3 +61,16 @@
 		}
 	}
 }
+footer {
+	position: relative;
+	background-color: #525163;
+	text-align: center;
+	padding: 24px 0 24px 0;
+	margin: 0;
+	p {
+		margin: 0;
+		padding: 0;
+		font-size: 14px;
+		color: white;
+	}
+}
