--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -23,7 +23,7 @@ html, body {
 				width: 280px;
 			}
 		}
-		#slogan {
+		#logo-text {
 			margin-bottom: 50px;
 			img {
 				width: 258px;
@@ -31,6 +31,7 @@ html, body {
 		}
 		p{
 			font-size: 36px;
+			line-height: 40px;
 			font-family: 'Roboto', sans-serif;
 			color: rgba(255,255,255,1);
 			text-shadow: 0px 2px 2px rgba(0,0,0,0.6);
@@ -134,54 +135,29 @@ html, body {
 			margin-left: -33.35%;
 		}
 	}
-	.button {
-		height: 210px;
-	}
-	.btn-learn {
-		margin: 94px 0px 0 0;
-		text-decoration: none;
-		color: white;
-		position: absolute;
-		left: 50%;
-		transform: translateX(-50%);
-		border-color: white;
+	.pattern-block {
+		height: 95px;
 	}
 }
 
 .contact {
 	background-image: url('/assets/bg-contact.png');
 	background-size: cover;
-	padding: 80px 80px 0 80px;
+	padding: 80px;
 	text-align: center;
 
 	h2 {
 		font-size: 36px;
-	}
-	p {
-		font-size: 24px;
-		color: rgba(255,255,255,1);
-		margin: 50px 0 50px 0;
-	}
-	.btn-contact {
-		display: inline-block;
-		text-decoration: none;
-		color: black;
-		margin: 100px 0 50px 0;
-	}	
-}
-footer {
-	position: relative;
-	background-color: #525163;
-	text-align: center;
-	padding: 50px 0 50px 0;
-	margin: 0;
-	p {
 		margin: 0;
 		padding: 0;
-		font-size: 14px;
-		color: white;
+	}
+
+	h1 {
+		font-size: 72px;
+		letter-spacing: 3px;
 	}
 }
+
 
 
 
