--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
 			<%= image_tag post.image.url(:medium) %>
 		<% end %>
 		<p><%= post.title %></p>
+		<a href="#" class="favorite"><i class="fas fa-heart"></i></a>
 	</div>
 	<% end %>
 </div>	
