--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -4,7 +4,7 @@
 .posts {
 	background-color: #FECF8C;
 	font-size: 0;
-	padding: 50px;	
+	padding: 40px;	
 	.post {
 		display: inline-block;
 		box-sizing: border-box;
@@ -14,6 +14,8 @@
 		width: calc(20vw - 12px - 100px/5);
 		height: calc(20vw * 4 /3 - 12px - 100px/2 + 60px);
 		vertical-align: top; 
+		position: relative;
+		
 
 		@media (max-width: 1200px) {
 			width: calc(25vw - 12px - 100px/4);
@@ -32,14 +34,20 @@
 			width: 100%;
 			height: calc(100% - 60px);
 			object-fit: cover;
-
 		}
 		p {
 			height: 60px;
 			font-size: 14px;
 			line-height: 15px;
 			margin-top: 5px;
-
+		}
+		.favorite {
+			position: absolute;
+			font-size: 24px;
+			z-index: 999;
+			top: 15px;
+			left: 15px;	
+			color: grey;		
 		}
 	}
 }
