--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,21 @@
-<%= simple_form_for @post, :html => { :class => 'table', :multipart => true } do |f| %>
-	<%= f.input :image, as: :file  %>
-	<%= f.input :title %>
-	<%= f.input :content %>
-	<%= f.submit %>
+<%= form_with(model: @post, local: true) do |form| %>
+
+
+	<div class="field">
+	  <%= form.label :title %>
+	  <%= form.text_field :title %>
+	</div>
+
+	<div class="field">
+	  <%= form.label :images %>
+	  <%= form.file_field :images, multiple: true %>
+	</div>
+
+	<div class="field">
+	  <%= form.label :content %>
+	  <%= form.text_area :content %>
+	</div>
+
+	<div class="actions">
+	  <%= form.submit %>
 <% end %>
