--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,6 @@
-<%= image_tag @post.image.url(:medium) %>
+<% (0...@post.images.count).each do |image| %>
+	<%= image_tag(@post.images[image], style:"width: 300px") %>  
+<% end %>
 <%= @post.title %>			
 <%= @post.content %>
 <%= link_to "Back", posts_path  %>
