--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
-<div class="posts">
+<div class="index">
 	<% @post.each do |post| %>
 	<div class="post">
 		<%= link_to post do %>
-			<%= image_tag(post.images[0], style:"width: 300px") %>  
+			<%= image_tag(post.medium(0)) %>  
 		<% end %>
 		<p><%= post.title %></p>
 		<a href="#" class="favorite"><i class="fas fa-heart"></i></a>
