--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,22 +1,21 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.posts {
-	background-color: #FECF8C;
+.index {
+	background-color: rgba(255,255,255,1);
 	font-size: 0;
-	padding: 40px;	
+	min-height: calc(100vh - 36px - 64px);
+	padding: 0 40px 0 40px;
 	.post {
 		display: inline-block;
 		box-sizing: border-box;
 		border: none;
-		margin: 0 6px 12px 6px;
+		margin: 12px 6px 12px 6px;
 		padding: none;
 		width: calc(20vw - 12px - 100px/5);
 		height: calc(20vw * 4 /3 - 12px - 100px/2 + 60px);
 		vertical-align: top; 
 		position: relative;
-		
-
 		@media (max-width: 1200px) {
 			width: calc(25vw - 12px - 100px/4);
 			height: calc(25vw * 4 /3 - 12px - 100px/2 + 60px);
@@ -37,9 +36,9 @@
 		}
 		p {
 			height: 60px;
-			font-size: 14px;
-			line-height: 15px;
+			font-size: 18px;
 			margin-top: 5px;
+			color: rgba(0,0,0,0.6);
 		}
 		.favorite {
 			position: absolute;
@@ -51,3 +50,105 @@
 		}
 	}
 }
+
+#show {
+	height: calc(100vh - 36px - 64px );
+	display: flex;
+	justify-content: center;
+	.image_container {
+		width: 450px;
+		height: 600px;
+		overflow: hidden;
+		position: relative;
+		margin-top: 50px;
+
+		.arrows {
+			z-index: 1;
+			position: absolute;
+			width: 450px;
+			top: 50%;
+			transform: translateY(-50%);
+			span {
+				font-size: 24px;
+				color: grey;
+				margin: 5px;
+				cursor: pointer;
+			}
+			span:hover {
+				color: aqua;
+			}
+		}
+		.ul_images {
+			width: 4000px;
+			padding: 0;
+
+
+			.li_image {
+				float: left;
+				list-style: none;
+			}
+		}
+	}
+	.image_btns {
+		display: flex;
+		justify-content: center;
+		width: 450px;
+		height: 60px;
+		margin: 10px 0 0 0;
+		cursor: pointer;
+
+		.image_btn {
+			float: left;
+			list-style: none;
+			margin: 0 5px 0 5px;
+			opacity: 0.6;
+		}
+		.image_btn:hover {
+			box-shadow: 0 2px 6px rgba(0,0,0,0.6);
+		}
+	}
+	.product_description {
+		width: 400px;
+		height: 600px;
+		margin: 50px 0 0 60px;
+		position: relative;
+		p {
+			padding-left: 5px;
+			color: rgba(0,0,0,0.8)
+		}
+	}
+	.control {
+		position: absolute;
+		
+		width: 100%;
+		top: 50%;
+		transform: translateY(-50%);
+		div {
+			display: inline-block;
+			border: 2px solid black;
+			border-radius: 3px;
+			padding: 5px 15px 5px 15px;
+			margin: 5px;
+			font-size: 18px;
+			line-height: 24px;
+			&.back {
+				background: rgba(0,0,0,0.3);
+				border: none;
+				a{
+					color: rgba(255,255,255,0.8);
+					border: none;
+					text-decoration: none;
+				}
+			}
+			&.favorite {
+				a{
+					text-decoration: none;
+					color: rgba(0,0,0,1);	
+				}
+			}
+		}
+	}
+
+}
+
+
