--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -18,7 +18,7 @@
 		<div class="images">
 			<% @post.each do |post| %>
 				<%= link_to post do %>
-					<%= image_tag(post.images[0], style:"width: 300px") %>  
+					<%= image_tag(post.medium(0)) %>  
 				<% end %>
 			<% end %>
 		</div>
