finished form styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
     </nav>
     <%= yield %>
     <footer>
-      <p>©2018 Chi-Wei Huang / B.Only</p>
+      <p>©2018 B.Only</p>
     </footer>
   </body>
 </html>
