--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.index {
+#index {
 	background-color: rgba(255,255,255,1);
 	font-size: 0;
 	min-height: calc(100vh - 36px - 64px);
@@ -46,7 +46,10 @@
 			z-index: 999;
 			top: 15px;
 			left: 15px;	
-			color: grey;		
+			color: rgba(0,0,0,0.3);		
+		}
+		.favorite:hover {
+			color: rgba(0,0,0,1);	
 		}
 	}
 }
@@ -150,5 +153,102 @@
 	}
 
 }
+
+#new {
+	position: relative;
+
+	h1 {
+		text-align: center;
+		font-size: 36px;
+		line-height: 40px;
+		margin: 15px;
+		padding: 0;
+	}
+}
+
+#edit {
+	position: relative;
+
+	h1 {
+		text-align: center;
+		font-size: 36px;
+		line-height: 40px;
+		margin: 15px;
+		padding: 0;
+	}
+	.control {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+		z-index: 999;
+	}
+	a {
+		text-decoration: none;
+		color: rgba(0,0,0,0.8);
+		text-align: center;
+		margin: 15px;
+		cursor: pointer;
+	}
+	
+}
+
+.form {
+	display: inline-block;
+	height: calc(100vh - 36px - 70px - 64px - 30px);
+	margin: 15px;
+	.fields {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+		width: 400px;
+		.field {
+			margin: 15px;
+			font-size: 24px;
+			input {
+				width: 100%;
+			}
+		}
+		label {
+		}
+
+		textarea {
+			width: 100%;
+			height: 200px;
+		}
+		.actions {
+			position: relative;
+			
+			input{
+				position: absolute;
+				display: block;
+				left: 50%;
+				transform: translateX(-50%);
+				padding: 5px 15px 5px 15px;
+				cursor: pointer;
+				background-color: none;
+			}
+		}
+
+	}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
