--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,21 +1,22 @@
-<%= form_with(model: @post, local: true) do |form| %>
-
-
-	<div class="field">
-	  <%= form.label :title %>
-	  <%= form.text_field :title %>
+<div class="form">
+	<div class="fields">
+		<%= form_with(model: @post, local: true) do |form| %>
+			<div class="field">
+			  <%= form.label :title %>
+			  <%= form.text_field :title %>
+			</div>
+			<div class="field">
+			  <%= form.label :images %>
+			  <%= form.file_field :images, multiple: true %>
+			</div>
+			<div class="field">
+			  <%= form.label :content %>
+			  <%= form.text_area :content %>
+			</div>
+			<div class="actions">
+			  <%= form.submit %>
+			</div>
+		<% end %>	
 	</div>
+</div>
 
-	<div class="field">
-	  <%= form.label :images %>
-	  <%= form.file_field :images, multiple: true %>
-	</div>
-
-	<div class="field">
-	  <%= form.label :content %>
-	  <%= form.text_area :content %>
-	</div>
-
-	<div class="actions">
-	  <%= form.submit %>
-<% end %>
