--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,10 +6,10 @@
 		<div id="logo-text"><img src="/assets/b-only2.png" alt="logo-slogan"></div>
 		<p id="slogan"></p>
 	</div>
-	<a href="#new"><i class="fas fa-angle-double-down"></i></a>
+	<a href="#new-in"><i class="fas fa-angle-double-down"></i></a>
 </div>
 
-<div class="new">
+<div class="new" id="new-in">
 	<div class="image-slider">
 		<div class="arrows">
 			<span title="left" class="arrow"> < </span>
@@ -49,7 +49,7 @@
 	<h2 id="contact1"></h2>
 	<h2 id="contact2"></h2>
 	<h1 id="contact3"></h1>
-	<h2 id="call"></h2>
+	<p id="call"></h2>
 </div>
 
 
