--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -17,6 +17,7 @@ html, body {
 		top: 50%;
 		left: 50%;
 		transform: translateX(-50%) translateY(-50%);
+		width: 100%;
 		#logo-lg {
 			margin: 30px;
 			img {
@@ -36,7 +37,15 @@ html, body {
 			color: rgba(255,255,255,1);
 			text-shadow: 0px 2px 2px rgba(0,0,0,0.6);
 			text-align: center;
+			width: 100%;
 		}
+		@media (max-width: 768px) {
+			p {
+				font-size: 20px;
+				text-shadow: 0px 2px 2px rgba(0,0,0,0.6);
+			}
+		}
+
 	}
 
 	i {
@@ -66,11 +75,11 @@ html, body {
 			top: 50%;
 			transform: translateY(-50%);
 			span {
-				font-size: 3em;
-				color: #525163;
+				font-size: 2em;
+				color: rgba(0,0,0,0.6);
 			}
 			span:hover {
-				color: aqua;
+				color: rgba(0,0,0,1);
 			}
 		}
 		.images {
@@ -105,12 +114,12 @@ html, body {
 	.cards {
 		display: flex;
 		justify-content: space-around;	
-		position: relative;	
+		position: relative;
 		.card {
 			text-align: center;
 			width: 460px;
-			margin: 5px;
 			position: relative;
+			padding: 0 15px 0 15px;
 			&:after {
 				content: " ";
 				position: absolute;
@@ -122,22 +131,49 @@ html, body {
 		}
 		.middle {
 			&:after {
-				bottom: -100px;
-				height: 100px;
+				bottom: -95px;
+				height: 95px;
 			}
 		}
 		&:after {
 			content: " ";
 			position: absolute;
 			left:50%;
-			bottom: -47px;
+			bottom: -50px;
 			width: 66.8%;
 			border-top: 2px solid rgba(255,255,255,0.8);
 			margin-left: -33.35%;
 		}
+		@media (max-width: 768px)  {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			&:after {
+				display: none;
+			}
+			.card {
+				padding: 0 15px 30px 15px;
+				width: 90%;
+				&:after {
+					bottom: -10px;
+					height: 40px;
+				}
+			}
+			.middle {
+				&:after {
+					bottom: -10px;
+					height: 40px;
+				}
+			}
+		}
 	}
 	.pattern-block {
 		height: 95px;
+	}
+	@media (max-width: 768px) {
+		.pattern-block {
+			height: 10px;
+		}
 	}
 }
 
@@ -157,8 +193,35 @@ html, body {
 		font-size: 72px;
 		letter-spacing: 3px;
 	}
+	p {
+		font-size: 36px;
+	}
 }
 
 
+@media (max-width: 992px) {
+	.contact {
+		padding: 80px 0 80px 0;
+		h2 {
+			font-size: 30px;
+		}
+		h1 {
+			font-size: 30px;
+			letter-spacing: 2px;
+		}
+	}
+}
+@media (max-width: 768px) {
+	.contact {
+		padding: 80px 0 80px 0;
+		h2 {
+			display: none;
+		}
+		h1 {
+			font-size: 36px;
+			letter-spacing: 1px;
+		}
+	}
+}
 
 
