--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -55,12 +55,13 @@
 }
 
 #show {
-	height: calc(100vh - 36px - 64px );
+	min-height: calc(100vh - 36px - 64px );
 	display: flex;
 	justify-content: center;
+	flex-wrap: wrap;
 	.image_container {
-		width: 450px;
-		height: 600px;
+		width: 300px;
+		height: 400px;
 		overflow: hidden;
 		position: relative;
 		margin-top: 50px;
@@ -68,7 +69,7 @@
 		.arrows {
 			z-index: 1;
 			position: absolute;
-			width: 450px;
+			width: 300px;
 			top: 50%;
 			transform: translateY(-50%);
 			span {
@@ -95,7 +96,7 @@
 	.image_btns {
 		display: flex;
 		justify-content: center;
-		width: 450px;
+		width: 300px;
 		height: 60px;
 		margin: 10px 0 0 0;
 		cursor: pointer;
@@ -111,21 +112,18 @@
 		}
 	}
 	.product_description {
-		width: 400px;
-		height: 600px;
-		margin: 50px 0 0 60px;
+		width: 300px;
+		margin: 50px 0 0 0;
 		position: relative;
+		padding: 30px;
 		p {
-			padding-left: 5px;
-			color: rgba(0,0,0,0.8)
+			color: rgba(0,0,0,0.8);
+			word-wrap: normal;
+
 		}
 	}
 	.control {
-		position: absolute;
-		
 		width: 100%;
-		top: 50%;
-		transform: translateY(-50%);
 		div {
 			display: inline-block;
 			border: 2px solid black;
@@ -232,7 +230,6 @@
 	}
 
 }
-
 
 
 
