--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -77,6 +77,7 @@ html, body {
 			span {
 				font-size: 2em;
 				color: rgba(0,0,0,0.6);
+				cursor: pointer;
 			}
 			span:hover {
 				color: rgba(0,0,0,1);
