--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -40,17 +40,23 @@
 			margin-top: 5px;
 			color: rgba(0,0,0,0.6);
 		}
-		.favorite {
+		.btn_favorite {
 			position: absolute;
 			font-size: 24px;
 			z-index: 999;
-			top: 15px;
-			left: 15px;	
-			color: rgba(0,0,0,0.3);		
+			top: 5px;
+			left: 5px;	
+			color: rgba(0,0,0,0.2);
+			border: none;	
+			padding: none;
 		}
-		.favorite:hover {
+		.btn_favorite:hover {
 			color: rgba(0,0,0,1);	
 		}
+		.active{
+			color: rgba(0,0,0,1);	
+		}
+
 	}
 }
 
@@ -126,7 +132,7 @@
 		width: 100%;
 		div {
 			display: inline-block;
-			border: 2px solid black;
+			// border: 2px solid black;
 			border-radius: 3px;
 			padding: 5px 15px 5px 15px;
 			margin: 5px;
@@ -144,7 +150,11 @@
 			&.favorite {
 				a{
 					text-decoration: none;
-					color: rgba(0,0,0,1);	
+					color: rgba(0,0,0,0.6)
+				}
+				i {
+					color: black;
+					margin-right: 5px;
 				}
 			}
 		}
