--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,17 @@
 			<%= image_tag(post.medium(0)) %>  
 		<% end %>
 		<p><%= post.title %></p>
-		<a href="#" class="favorite"><i class="fas fa-heart"></i></a>
+		<% if current_user %>
+			<% if !post.favorited_by.ids.include? current_user.id %>
+				<%= link_to favorite_post_path(post, type: "favorite"), method: :put, class:"btn btn_favorite" do %>
+		        	 <i class="fas fa-heart"></i>
+		        <% end %>
+		    <% else %>
+		        <%= link_to favorite_post_path(post, type: "unfavorite"), method: :put, class:"btn btn_favorite" do %>
+		            <i class="fas fa-heart active"></i>
+		        <% end %>
+		    <% end %>
+		<% end %>
 	</div>
 	<% end %>
 </div>	
