--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,7 @@
 <div id="edit">
 	<h1>Edit Post</h1>
 	<div class="control">
-		<%= link_to "Back", posts_path %>
+		<%= link_to "Cancel", posts_path %>
 		<%= link_to @post, method: :delete, data: { confirm: 'Are you sure?' } do %>
 			<i class="far fa-trash-alt"></i>
 		<% end %>
