--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,6 +5,7 @@
 			<%= image_tag(post.medium(0)) %>  
 		<% end %>
 		<p><%= post.title %></p>
+
 		<% if current_user %>
 			<% if !post.favorited_by.ids.include? current_user.id %>
 				<%= link_to favorite_post_path(post, type: "favorite"), method: :put, class:"btn btn_favorite" do %>
@@ -15,7 +16,23 @@
 		            <i class="fas fa-heart active"></i>
 		        <% end %>
 		    <% end %>
+
+
+		    <% if current_user.admin == true %>
+		      <div class="admin-tool">
+		      		<%= link_to edit_post_path(post) do %>
+		      			<i class="far fa-edit"></i>
+		      		<% end %> 
+		    		<%= link_to post, method: :delete, data: { confirm: 'Are you sure?' } do %>
+		      			<i class="far fa-trash-alt"></i>
+		      		<% end %>
+		      </div>
+		    <% end %>
 		<% end %>
+
+
+
+
 	</div>
 	<% end %>
 </div>	
