updated img_tag in html.erb

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -2,8 +2,12 @@
 
 <div class="banner">
 	<div class="brand">
-		<div id="logo-lg"><img src="/assets/b-only.png" alt="logo-large"></div>
-		<div id="logo-text"><img src="/assets/b-only2.png" alt="logo-slogan"></div>
+		<div id="logo-lg">
+			<%= image_tag "b-only.png" %>
+		</div>
+		<div id="logo-text">
+			<%= image_tag "b-only2.png" %>
+		</div>
 		<p id="slogan"></p>
 	</div>
 	<a href="#new-in"><i class="fas fa-angle-double-down"></i></a>
