--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -4,7 +4,7 @@ html, body {
 }
 
 .banner {
-	background-image: url('/assets/banner.png');
+	background-image: url(<%= asset_path 'banner.png' %>);
 	background-size: cover;
 	height: calc(100vh - 36px);
 	padding: 0;
@@ -179,7 +179,8 @@ html, body {
 }
 
 .contact {
-	background-image: url('/assets/bg-contact.png');
+	background-image: url(<%= asset_path 'bg-contact.png' %>);
+	// background-image: url('/assets/bg-contact.png');
 	background-size: cover;
 	padding: 80px;
 	text-align: center;
