--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -14,9 +14,6 @@ html, body {
 		flex-direction: column;
 		align-items: center;
 		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translateX(-50%) translateY(-50%);
 		width: 100%;
 		#logo-lg {
 			margin: 30px;
@@ -40,6 +37,18 @@ html, body {
 			width: 100%;
 		}
 		@media (max-width: 768px) {
+			#logo-lg {
+				margin: 50px;
+				img {
+					width: 200px;
+				}
+			}
+			#logo-text {
+				margin-bottom: 50px;
+				img {
+					width: 180px;
+				}
+			}
 			p {
 				font-size: 20px;
 				text-shadow: 0px 2px 2px rgba(0,0,0,0.6);
