added gem aws-sdk-s3

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -8,7 +8,7 @@
 		<div id="logo-text">
 			<%= image_tag "b-only2.png" %>
 		</div>
-		<p id="slogan"></p>
+		<p id="slogan">你最好的服裝供應夥伴</p>
 	</div>
 	<a href="#new-in"><i class="fas fa-angle-double-down"></i></a>
 </div>
@@ -27,22 +27,22 @@
 			<% end %>
 		</div>
 	</div>
-	<%= link_to 'New In', posts_path, class: "btn btn-new"%>
+	<%= link_to '最新到貨', posts_path, class: "btn btn-new"%>
 </div>
 
 <div class="about">
 	<div class="cards">
 		<div class="card">
-			<h2 id="about_title1"></h2>
-			<p id="about_content1"></p>
+			<h2 id="about_title1">專業</h2>
+			<p id="about_content1">我們憑藉30年服裝市場經驗，提供最新時尚趨勢和服裝給女士們，我們也歡迎任何風格的創新拓展。</p>
 		</div>
 		<div class="card middle">
-			<h2 id="about_title2"></h2>
-			<p id="about_content2"></p>
+			<h2 id="about_title2">品質</h2>
+			<p id="about_content2">品質為最高優先，我們與供應夥伴合作，建立嚴格品質檢驗標準，確保最佳品質。</p>
 		</div>
 		<div class="card">
-			<h2 id="about_title3"></h2>
-			<p id="about_content3"></p>
+			<h2 id="about_title3">服務</h2>
+			<p id="about_content3">我們在意您的購買體驗，所有的商品皆可更換良品或等值商品。</p>
 		</div>
 	</div>
 	<div class="pattern-block">	
@@ -50,10 +50,10 @@
 </div>
 
 <div class="contact">
-	<h2 id="contact1"></h2>
-	<h2 id="contact2"></h2>
-	<h1 id="contact3"></h1>
-	<p id="call"></h2>
+	<h2 id="contact1">尋找物美價廉的服裝？</h2>
+	<h2 id="contact2">尋找值得信賴的商業夥伴？</h2>
+	<h1 id="contact3">歡迎來電</h1>
+	<p id="call">+886 7 2357291</h2>
 </div>
 
 
