--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -6,14 +6,14 @@ html, body {
 .banner {
 	background-image: url(<%= asset_path 'banner.png' %>);
 	background-size: cover;
-	height: calc(100vh - 36px);
+	min-height: calc(100vh - 36px);
 	padding: 0;
 	margin: 0;
 	.brand {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		position: absolute;
+		padding-top: 75px;
 		width: 100%;
 		#logo-lg {
 			margin: 30px;
