--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -6,15 +6,18 @@ html, body {
 .banner {
 	background-image: url(<%= asset_path 'banner.png' %>);
 	background-size: cover;
-	min-height: calc(100vh - 36px);
+	height: calc(100vh - 36px);
+	min-height: 600px;
 	padding: 0;
 	margin: 0;
 	.brand {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		padding-top: 75px;
 		width: 100%;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
 		#logo-lg {
 			margin: 30px;
 			img {
@@ -22,7 +25,6 @@ html, body {
 			}
 		}
 		#logo-text {
-			margin-bottom: 50px;
 			img {
 				width: 258px;
 			}
