--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -155,6 +155,7 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		box-sizing: border-box;
 		p {
 			color: rgba(0,0,0,0.8);
 			word-wrap: normal;
