--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,14 +120,15 @@
     display: block;
 }
 
-
+.container {
+	min-height: calc(100vh - 36px - 64px)
+}
 
 footer {
 	position: relative;
 	background-color: rgba(0,0,0,1);
 	text-align: center;
 	padding: 24px 0 24px 0;
-	margin: 0;
 	p {
 		margin: 0;
 		padding: 0;
@@ -135,3 +136,43 @@ footer {
 		color: white;
 	}
 }
+
+.devise-container {
+	display: flex;
+	flex-direction: column;
+	margin-top: 20px;
+	h2 {
+		margin-left: 50px;
+	}
+	form {
+		margin-left: 50px;
+		.form-inputs {
+			label {
+				display: block;
+			}
+
+		}
+		label {
+			margin: 5px;
+			width: 300px;
+
+	
+		}
+		input {
+			width: 300px;
+		}
+		.btn {
+			font-size: 14px;
+			padding: 2px 10px 2px 10px;
+			margin-top: 15px;
+		}
+		#user_remember_me {
+			width: 20px;
+		}
+	}
+	a {
+		margin: 0 0 0 50px;
+	}
+
+}
+
