--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         <% end %>
 
         <div class="dropdown">
-          <%= link_to root_path, class: "btn btn-control" do %>
+          <%= link_to '#' , class: "btn btn-control" do %>
             <i class="fas fa-user", class: "dropdown-btn"></i>
           <% end %>
           <div class="dropdown-content">
@@ -51,7 +51,10 @@
         
       </div>  
     </nav>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
+   
     <footer>
       <p>©2018 B.Only</p>
     </footer>
