--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,30 +13,28 @@
   <body>
     <nav class="navbar">
       <div class="lang">
-        <a href="#" class="btn btn-lang" id="EN">EN |</a>
-        <a href="#" class="btn btn-lang" id="CN">CN</a>  
+        <a class="btn btn-lang" id="EN">EN |</a>
+        <a class="btn btn-lang" id="CN">CN</a>  
       </div>
-
-      <div class="control" data-no-turbolink>
+      <div class="control" >
         <% if user_signed_in? %>
           <% if current_user.admin == true %>
-            <%= link_to new_post_path, class: "btn btn-control" do %>
+            <%= link_to new_post_path, class: "btn btn-control", title:"New" do %>
               <i class="fas fa-folder-plus"></i>
             <% end %>
           <% end %>
         <% end %>
-        <%= link_to root_path, class: "btn btn-control" do %>
+        <%= link_to root_path, class: "btn btn-control", title:"Home" do %>
           <i class="fas fa-home"></i>
         <% end %>
-        <%= link_to posts_path, class: "btn btn-control" do %>
+        <%= link_to posts_path, class: "btn btn-control", title:"Products" do %>
             <i class="fas fa-shopping-cart"></i>
         <% end %>
-        <%= link_to favorite_posts_path, class: "btn btn-control" do %>
+        <%= link_to favorite_posts_path, class: "btn btn-control", title:"Favorite" do %>
             <i class="fas fa-heart"></i>
         <% end %>
-
         <div class="dropdown">
-          <%= link_to '#' , class: "btn btn-control" do %>
+          <%= link_to '#' , class: "btn btn-control", title:"Account" do %>
             <i class="fas fa-user", class: "dropdown-btn"></i>
           <% end %>
           <div class="dropdown-content">
