--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -2,13 +2,10 @@ html, body {
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
 }
-
 .banner {
-	background-image: url(<%= asset_path 'banner.png' %>);
+	background-image: url(<%= asset_path 'banner.jpg' %>);
 	background-size: cover;
 	height: calc(100vh - 36px);
-	padding: 0;
-	margin: 0;
 	.brand {
 		display: flex;
 		flex-direction: column;
@@ -31,9 +28,8 @@ html, body {
 		p{
 			font-size: 36px;
 			line-height: 40px;
-			font-family: 'Roboto', sans-serif;
 			color: rgba(255,255,255,1);
-			text-shadow: 0px 2px 2px rgba(0,0,0,0.6);
+			text-shadow: 0px 2px 10px rgba(0,0,0,0.6);
 			text-align: center;
 			width: 100%;
 		}
@@ -55,9 +51,7 @@ html, body {
 				text-shadow: 0px 2px 2px rgba(0,0,0,0.6);
 			}
 		}
-
 	}
-
 	i {
 		font-size: 24px;
 		text-align: center;
@@ -187,9 +181,8 @@ html, body {
 		}
 	}
 }
-
 .contact {
-	background-image: url(<%= asset_path 'bg-contact.png' %>);
+	background-image: url(<%= asset_path 'bg-contact.jpg' %>);
 	// background-image: url('/assets/bg-contact.png');
 	background-size: cover;
 	padding: 80px;
