--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -202,9 +202,8 @@
 	h1 {
 		text-align: center;
 		font-size: 36px;
-		line-height: 40px;
-		margin: 15px;
 		padding: 0;
+		margin: 0;
 	}
 }
 
@@ -220,60 +219,43 @@
 		padding: 0;
 	}
 	.control {
-		position: absolute;
-		left: 50%;
-		transform: translateX(-50%);
 		z-index: 999;
+		position: absolute;
+		left: 50%; 
+		transform: translateX(-50%);
+		font-size: 24px;
+		i {
+			color: rgba(0,0,0,0.8);
+		}
 	}
-	a {
-		text-decoration: none;
-		color: rgba(0,0,0,0.8);
-		text-align: center;
-		margin: 15px;
-		cursor: pointer;
-	}
-	
 }
 
 .form {
-	display: inline-block;
-	min-height: calc(100vh - 36px - 70px - 64px - 30px);
-	margin: 15px;
 	.fields {
 		position: absolute;
 		left: 50%;
 		transform: translateX(-50%);
-		width: 400px;
+		min-width: 90vw;
 		.field {
 			margin: 15px;
 			font-size: 24px;
 			input {
 				width: 100%;
+				height: 24px;
 			}
 		}
-		label {
-		}
-
 		textarea {
 			width: 100%;
 			height: 200px;
 		}
 		.actions {
-			position: relative;
-			
-			input{
-				position: absolute;
-				display: block;
-				left: 50%;
-				transform: translateX(-50%);
-				padding: 5px 15px 5px 15px;
-				cursor: pointer;
-				background-color: none;
+			display: flex;
+			justify-content: center;
+			.btn {
+				margin: 10px;
 			}
 		}
-
 	}
-
 }
 
 
