--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,19 +2,20 @@
 	<div class="fields">
 		<%= form_with(model: @post, local: true) do |form| %>
 			<div class="field">
-			  <%= form.label :title %>
+			  <%= form.label :title %> 產品名稱
 			  <%= form.text_field :title %>
 			</div>
 			<div class="field">
-			  <%= form.label :images %>
+			  <%= form.label :images %> 圖片
 			  <%= form.file_field :images, multiple: true %>
 			</div>
 			<div class="field">
-			  <%= form.label :content %>
+			  <%= form.label :content %> 內容
 			  <%= form.text_area :content %>
 			</div>
 			<div class="actions">
-			  <%= form.submit %>
+				<input type="submit" class="btn" value="提交" />
+				<%= link_to "取消", posts_path, class: "btn" %>
 			</div>
 		<% end %>	
 	</div>
