--- a/app/assets/stylesheets/main.scss.erb
+++ b/app/assets/stylesheets/main.scss.erb
@@ -25,7 +25,7 @@ html, body {
 				width: 258px;
 			}
 		}
-		p{
+		#slogan {
 			font-size: 36px;
 			line-height: 40px;
 			color: rgba(255,255,255,1);
@@ -35,7 +35,6 @@ html, body {
 		}
 		@media (max-width: 768px) {
 			#logo-lg {
-				margin: 50px;
 				img {
 					width: 200px;
 				}
@@ -46,9 +45,8 @@ html, body {
 					width: 180px;
 				}
 			}
-			p {
+			#slogan {
 				font-size: 20px;
-				text-shadow: 0px 2px 2px rgba(0,0,0,0.6);
 			}
 		}
 	}
@@ -59,10 +57,8 @@ html, body {
 		top: 95%;
 		width: 100%;
 		color: rgba(0,0,0,1);
-		font-weight: light;
 	}
 }
-
 ////////New In////////
 .new {
 	background-color: rgba(255,255,255,1);
@@ -183,17 +179,14 @@ html, body {
 }
 .contact {
 	background-image: url(<%= asset_path 'bg-contact.jpg' %>);
-	// background-image: url('/assets/bg-contact.png');
 	background-size: cover;
 	padding: 80px;
 	text-align: center;
-
 	h2 {
 		font-size: 36px;
 		margin: 0;
 		padding: 0;
 	}
-
 	h1 {
 		font-size: 72px;
 		letter-spacing: 3px;
@@ -202,8 +195,6 @@ html, body {
 		font-size: 36px;
 	}
 }
-
-
 @media (max-width: 992px) {
 	.contact {
 		padding: 80px 0 80px 0;
@@ -228,5 +219,3 @@ html, body {
 		}
 	}
 }
-
-
