--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,7 @@
 <div class="devise-container">
-  <h2>Sign up</h2>
-
+  <h2>Sign up 建立新帳戶</h2>
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
-
     <div class="form-inputs">
       <%= f.input :email,
                   required: true,
@@ -17,12 +15,10 @@
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
     </div>
-
     <div class="form-actions">
       <%= f.button :submit, "Sign up" %>
     </div>
   <% end %>
-
   <%= render "devise/shared/links" %>  
 </div>
 
