added Hi, accound id

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,7 @@
           <% end %>
           <div class="dropdown-content">
             <% if user_signed_in? %>
+              <%= link_to "Hi, #{current_user.email.split('@')[0]}","",class:"account-id" %>
               <%= link_to "Sign Out", destroy_user_session_path, :method => :delete %>
             <% else %>
               <%= link_to "Sign In", new_user_session_path %>
