--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,8 +97,8 @@
     background-color: rgba(255,255,255,0.8);
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 9999; 
-    width: 160px;
-    transform: translateX(-50%);
+    width: 200px;
+    transform: translateX(-60%);
 
     a {
       color: black;
@@ -113,10 +113,14 @@
     a:nth-child(1) {
     	border-bottom: 1px solid rgba(0,0,0,0.2);
     }
+    .account-id {
+    	color: blue;
+    	cursor: default;
+    }
   }
 }
 .dropdown:hover .dropdown-content {
-    display: block;
+    display: inline-block;
 }
 
 .container {
