--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -14,10 +14,10 @@
 			  <%= form.text_area :content %>
 			</div>
 			<div class="actions">
-				<input type="submit" class="btn" value="提交" />
+        <%= button_tag "提交", class: "btn btn-transparent", 'data-disable-with' => "<i class='fa fa-spinner fa-spin'></i> 上傳中...".html_safe %>
 				<%= link_to "取消", posts_path, class: "btn" %>
 			</div>
-		<% end %>	
+		<% end %>
 	</div>
 </div>
 
