--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -24,7 +24,7 @@
 		<div class="images">
 			<% @post.each do |post| %>
 				<%= link_to post do %>
-					<%= image_tag(post.medium(0), class:"image") %>  
+					<%= image_tag(post.medium(0), class:"image") %>
 				<% end %>
 			<% end %>
 		</div>
@@ -47,14 +47,14 @@
 			<p id="about_content3">我們在意您的購買體驗，所有的商品皆可更換良品或等值商品。</p>
 		</div>
 	</div>
-	<div class="pattern-block">	
+	<div class="pattern-block">
 	</div>
 </div>
 <div class="contact">
 	<h2 id="contact1">尋找物美價廉的服裝？</h2>
 	<h2 id="contact2">尋找值得信賴的商業夥伴？</h2>
 	<h1 id="contact3">歡迎來電</h1>
-	<p id="call">+886 7 2357291</h2>
+	<p id="call"><code>+886 7 2357291<code></h2>
 </div>
 
 
@@ -63,4 +63,4 @@
 
 
 
- 
+
