--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,7 +3,7 @@
 	<%= render 'form' %>
 	<div class="control">
 		<%= link_to @post, method: :delete, data: { confirm: 'Are you sure?' } do %>
-			<i class="far fa-trash-alt"></i>
+			<i class="far fa-trash-alt btn"></i>
 		<% end %>
 	</div>
 </div>
